# watchmecode

.github/workflows/: deploy.yml
watchmecode-client/: package-lock.json  package.json  svelte.config.js
watchmecode-client/src/routes/: +page.svelte
watchmecode-host/: .gitignore  Cargo.toml
watchmecode-host/src/: main.rs
