[package]
name = "watchmecode-host"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = "0.4.38"
fxhash = "0.2.1"
parking_lot = "0.12.3"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["compression-br", "cors"] }
