[package]
name = "watchmecode-host"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
fxhash = "0.2.1"
parking_lot = "0.12.3"
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["compression-br"] }
