[package]
name = "watchmecode-host"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros", "ws"] }
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
ngrok = "0.13.1"
notify = "6.1.1"
parking_lot = "0.12.3"
tokio = { version = "1.40.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.5.2", features = ["compression-br", "cors"] }
